<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button!</string>
    <string name="login_message">Login</string>
    <string name="hint_message">Login name</string>
    <string name="password_message">Password</string>
    <string name="button_message">RadioButton</string>
    <string name="checkbox_message">CheckBox</string>
    <string name="switch_message">What does this do?</string>
    <string name="login_button_text">Login!</string>
    <string name="dialog_message">Do you want to finish the activity?</string>

    <string name="dialog_title">Option</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="start_chat_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="title_activity_weather_forecast">Weather Forecast</string>

    <string name="notice">Weather in Ottawa</string>
    <string name="min">Min Temp:</string>
    <string name="max">Max Temp:</string>
    <string name="current">Current Temp:</string>
    <string name="title_activity_message_details">MessageDetails</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>


</resources>
