<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.algonquin.androidlabs.StartActivity">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        />

    <Button
        android:id="@+id/start_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chat_button"
        />

    <Button
        android:id="@+id/weather_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_weather_forecast"
        />

</LinearLayout>
