<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.algonquin.androidlabs.ListItemActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    android:rowCount="2"
    android:columnCount="2"
    >

    <GridLayout
        android:layout_width="184dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"

        >

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_message" />
    </GridLayout>

    <GridLayout
        android:layout_width="184dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="8dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/checkbox_message"/>
    </GridLayout>

    <GridLayout
        android:layout_width="184dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="108dp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/switch_message" />
    </GridLayout>

    <GridLayout
        android:layout_width="184dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="108dp"


        >

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_menu_camera" />
    </GridLayout>
</GridLayout>
